AWS_Website/www_static/A1/css/A1.css
/* ... */
		
		.panelTitle{  
			position: absolute;
			left: 3;
			font-size:14px;
			font-weight: bold;
			color: #8E8D8D;
			width: 100%;
		}

	    #personalNotes{
			z-index: 3;
	    	position: absolute;
	    	bottom: 0px;
			right: 0px;
	    	display: none;			
			width: 50%;
			border-style: solid;
			border-width: 1px;
			border-color: lightblue;
			border-radius: 25px;
			right: 0px;
	    	height: 500px;			
			
			background-image:  -webkit-linear-gradient(left, rgba(255,85,91, .2), rgba(255,85,91, .2)), -webkit-linear-gradient(left, rgba(255,85,91, .8), rgba(255,85,91, .8)), -webkit-linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), -webkit-repeating-linear-gradient(white 0px, white 18px, #A6FFED 19px, white 20px);
			background-image:  -moz-linear-gradient(left, rgba(255,85,91, .2), rgba(255,85,91, .2)), -moz-linear-gradient(left, rgba(255,85,91, .8), rgba(255,85,91, .8)), -moz-linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), -moz-repeating-linear-gradient(white 0px, white 18px, #A6FFED 19px, white 20px);
			background-image:  -ms-linear-gradient(left, rgba(255,85,91, .2), rgba(255,85,91, .2)), -ms-linear-gradient(left, rgba(255,85,91, .8), rgba(255,85,91, .8)), -ms-linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), -ms-repeating-linear-gradient(white 0px, white 18px, #A6FFED 19px, white 20px);
			background-image:  -o-linear-gradient(left, rgba(255,85,91, .2), rgba(255,85,91, .2)), -o-linear-gradient(left, rgba(255,85,91, .8), rgba(255,85,91, .8)), -o-linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), -o-repeating-linear-gradient(white 0px, white 18px, #A6FFED 19px, white 20px);
			background-image:  linear-gradient(left, rgba(255,85,91, .2), rgba(255,85,91, .2)), linear-gradient(left, rgba(255,85,91, .8), rgba(255,85,91, .8)), linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), repeating-linear-gradient(white 0px, white 18px, #A6FFED 19px, white 20px);
			background-size: 1px, 1px, auto, auto 20px;
			background-repeat: repeat-y, repeat-y, no-repeat, repeat;
			background-position: 90% 0px, 10% 0px, 0px 0px, 0px 0px;
		}

		.paper {
			margin: 0;
			display: block;
			font: 10pt Arial, sans-serif;    
			line-height: 20px;
			padding-top: 50px;
			padding-left: 10.5%;
			padding-right: 10.5%;
			text-align: justify;
			white-space: nowrap;
			max-height: 90%;
			overflow-y: auto;
		}
		.paper:first-line {
			font: 20pt Arial, sans-serif;
			line-height: 33px;
			vertical-align: baseline;
		}
		.paper:after {    
			content: '';
			display: block;
			width: 20px;
			height: 20px;
			border-radius: 10px;
			position: absolute;
			background: rgba(255,255,255,1);
			top: 40px;
			left: 2%;
			z-index: 10;
			-webkit-box-shadow: 
				inset 2px 2px 5px rgba(125,125,125,1),  
				2px 50.1em 5px rgba(255,255,255,1), 0px 50em rgba(125,125,125,.75),  
				2px 90.1em 5px rgba(255,255,255,1), 0px 90em rgba(125,125,125,.5),
				2px 130.1em 5px rgba(255,255,255,1), 0px 130em rgba(125,125,125,.25);
			-moz-box-shadow: 
				inset 2px 2px 5px rgba(125,125,125,1),  
				2px 50.1em 5px rgba(255,255,255,1), 0px 50em rgba(125,125,125,.75),  
				2px 90.1em 5px rgba(255,255,255,1), 0px 90em rgba(125,125,125,.5),
				2px 130.1em 5px rgba(255,255,255,1), 0px 130em rgba(125,125,125,.25);
			box-shadow: 
				inset 2px 2px 5px rgba(125,125,125,1),  
				2px 50.1em 5px rgba(255,255,255,1), 0px 50em rgba(125,125,125,.75),  
				2px 90.1em 5px rgba(255,255,255,1), 0px 90em rgba(125,125,125,.5),
				2px 130.1em 5px rgba(255,255,255,1), 0px 130em rgba(125,125,125,.25);
		}

		.paper:focus {
			outline: none;
		}

	    #chatPanel{
	    	position: fixed;
	    	bottom: 0px;
	    	width: 50%;
	    	height: 15px;
	    	 background-color: #444444;
  			background-image: -webkit-linear-gradient(top, #444444, #999999); /* Chrome 10-25, iOS 5+, Safari 5.1+ */
  			background-image: linear-gradient(to bottom, #444444, #999999); /* Chrome 26, Firefox 16+, IE 10+, Opera */
	    }
		
		

	    #personalNotesPanel{
			position: fixed;
			bottom: 0px;
			right: 0px;
	    	bottom: 0px;
	    	width: 50%;
	    	height: 15px;
	    	background-color: #444444;
  			background-image: -webkit-linear-gradient(top, #444444, #999999); /* Chrome 10-25, iOS 5+, Safari 5.1+ */
  			background-image: linear-gradient(to bottom, #444444, #999999); /* Chrome 26, Firefox 16+, IE 10+, Opera */
	    }
		
		#helpOverlay {
		  opacity:    0.9; 
		  background: black; 
		  width:      100%;
		  height:     100%; 
		  z-index:    10;
		  top:        0; 
		  left:       0; 
		  position:   fixed; 
		  color: black;
		  display: none;
		}
		
		#insertVideoSlideOverlay {
		  opacity:    0.9; 
		  background: black; 
		  width:      100%;
		  height:     100%; 
		  z-index:    10;
		  top:        0; 
		  left:       0; 
		  position:   fixed; 
		  color: black;
		  display: none;
		}
		
		#insertVideoSlide{
			padding-top:100px;
			color: white;
		}

	    #HCB_comment_box{
	    	height: 100%;
	    	border-width: 1px;
	    	border-style: dotted;
	    }

	    iframe * img{
	    	width: 100%;
	    }
		


		/* VideoChat  */

		audio, video {
                -moz-transition: all 1s ease;
                -ms-transition: all 1s ease;

                -o-transition: all 1s ease;
                -webkit-transition: all 1s ease;
                transition: all 1s ease;
                vertical-align: top;
            }

            input {
                border: 1px solid #d9d9d9;
                border-radius: 1px;
                font-size: 2em;
                margin: .2em;
                width: 30%;
            }

            .setup {
                border-bottom-left-radius: 0;
                border-top-left-radius: 0;
                font-size: 102%;
                height: 47px;
                margin-left: -9px;
                margin-top: 8px;
                position: absolute;
            }

            p { padding: 1em; }
/* ... */

